<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">小梨听书</string>
    <string name="app_short_name">小梨</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication_required">Authentication required</string>
    <string name="banner_adapter_null_error">Adapter为空！请检查下参数</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，点击重试</string>
    <string name="brvah_loading">加载中...</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="contact_email_text">lytskefu@gmail.com</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="homepage_group_more">更多</string>
    <string name="homepage_search_bar_placeholder">书名/节目/主播</string>
    <string name="homepage_tab_new_album">新书</string>
    <string name="homepage_tab_recommend">推荐</string>
    <string name="homepage_tab_update">更新</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="indicator_color_error">指示器的颜色只能设置成“@color/colorID or #000000”</string>
    <string name="item_view_role_description">Tab</string>
    <string name="ksad_ad_default_username_normal">可爱的广告君</string>
    <string name="ksad_card_tips_interested">感兴趣</string>
    <string name="ksad_card_tips_pre">预告</string>
    <string name="ksad_click_immediate">立即点击</string>
    <string name="ksad_data_error_toast">内容获取失败</string>
    <string name="ksad_deep_link_dialog_content">再次开启 【%s】</string>
    <string name="ksad_default_no_more_tip_or_toast_txt">更多内容请前往快手App查看</string>
    <string name="ksad_download_kwai_waiting">下载信息获取中，请稍后再试。</string>
    <string name="ksad_half_page_loading_error_tip">加载失败，请点击重试</string>
    <string name="ksad_install_tips">“ %1$s ”已完成下载，点击完成安装</string>
    <string name="ksad_launch_tips">您已安装“ %1$s ”，是否打开该应用</string>
    <string name="ksad_leave_persist">残忍离开</string>
    <string name="ksad_left_slide_to_next">左滑试一试</string>
    <string name="ksad_live_end">直播已结束</string>
    <string name="ksad_network_error_toast">网络错误</string>
    <string name="ksad_no_title_common_dialog_negativebtn_title">取消</string>
    <string name="ksad_no_title_common_dialog_positivebtn_title">确定</string>
    <string name="ksad_page_load_no_more_tip">无更多内容</string>
    <string name="ksad_page_loading_data_error_sub_title">内容获取失败请点击重试</string>
    <string name="ksad_page_loading_data_error_title">空空如也</string>
    <string name="ksad_page_loading_error_retry">重试</string>
    <string name="ksad_page_loading_network_error_sub_title">请检查网络连接后重试</string>
    <string name="ksad_page_loading_network_error_title">网络不给力</string>
    <string name="ksad_request_install_content">安装后，可以在快手查看商品详情和下单</string>
    <string name="ksad_request_install_nagative">暂不开启</string>
    <string name="ksad_request_install_positive">去开启</string>
    <string name="ksad_request_install_title">授权安装快手</string>
    <string name="ksad_reward_playable_load_error_toast">请稍后重试，内容准备中</string>
    <string name="ksad_reward_success_tip">领取奖励</string>
    <string name="ksad_right_slide_to_return">右滑返回</string>
    <string name="ksad_see_detail">了解详情 &gt;</string>
    <string name="ksad_skip_text">跳过</string>
    <string name="ksad_splash_preload_tips_text">已提前加载</string>
    <string name="ksad_splash_rotate_combo_rotate_text">扭动或点击了解更多</string>
    <string name="ksad_splash_shake_combo_action_text">摇一摇</string>
    <string name="ksad_splash_shake_combo_sub_text">或点击跳转详情页/三方应用</string>
    <string name="ksad_splash_slide_combo_guide_text">任意方向滑动或点击</string>
    <string name="ksad_splash_slide_combo_sub_text">跳转详情或第三方应用</string>
    <string name="ksad_splash_slide_guide_text">轻滑试试</string>
    <string name="ksad_watch_continue">留下看看</string>
    <string name="live_in_loading">正在加载</string>
    <string name="live_in_loading_failed">加载失败，请稍后重试~</string>
    <string name="nav_bookshelf">书架</string>
    <string name="nav_category">分类</string>
    <string name="nav_homepage">首页</string>
    <string name="nav_mine">我的</string>
    <string name="xupdate_lab_background_update">Background Upgrade</string>
    <string name="xupdate_lab_ignore">Ignore</string>
    <string name="xupdate_lab_update">Upgrade</string>
</resources>