<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/xupdate_bg_app_info"
            android:padding="@dimen/xupdate_content_padding"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:textSize="@dimen/xupdate_title_text_size"
                android:textColor="@color/xupdate_title_text_color"
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.core.widget.NestedScrollView
                android:paddingTop="@dimen/xupdate_common_padding"
                android:paddingBottom="@dimen/xupdate_common_padding"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:overScrollMode="never">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="@dimen/xupdate_content_text_size"
                        android:textColor="@color/xupdate_content_text_color"
                        android:id="@+id/tv_update_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/xupdate_content_line_spacing_extra_size"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
            <Button
                android:textSize="@dimen/xupdate_button_text_size"
                android:textColor="@color/xupdate_button_text_color"
                android:gravity="center"
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/xupdate_button_min_height"
                android:text="@string/xupdate_lab_update"/>
            <TextView
                android:textSize="@dimen/xupdate_button_text_size"
                android:textColor="@color/xupdate_content_text_color"
                android:gravity="center"
                android:id="@+id/tv_ignore"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/xupdate_button_min_height"
                android:text="@string/xupdate_lab_ignore"/>
            <com.xuexiang.xupdate.widget.NumberProgressBar
                android:id="@+id/npb_progress"
                android:paddingTop="@dimen/xupdate_common_padding"
                android:paddingBottom="@dimen/xupdate_common_padding"
                android:visibility="gone"
                style="@style/XUpdate_ProgressBar_Red"/>
            <Button
                android:textSize="@dimen/xupdate_button_text_size_mini"
                android:textColor="@color/xupdate_button_text_color"
                android:gravity="center"
                android:id="@+id/btn_background_update"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/xupdate_button_min_height_mini"
                android:text="@string/xupdate_lab_background_update"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/ll_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:background="@color/xupdate_close_line_color"
                android:layout_width="@dimen/xupdate_close_line_width"
                android:layout_height="@dimen/xupdate_close_line_height"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/xupdate_close_icon_size"
                android:layout_height="@dimen/xupdate_close_icon_size"
                android:layout_marginTop="-2dp"
                app:srcCompat="@drawable/xupdate_icon_app_close"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
