<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.qmuiteam.qmui.widget.QMUIViewPager
        android:id="@+id/viewPager"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/lyTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.qmuiteam.qmui.layout.QMUIFrameLayout
        android:id="@+id/lyTab"
        android:background="@color/nav_tab_background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/nav_tab_shadow_color"
        android:outlineAmbientShadowColor="@color/nav_tab_shadow_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.angcyo.tablayout.DslTabLayout
            android:id="@+id/tabSegment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:tab_enable_gradient_scale="true"
            app:tab_item_auto_equ_width="true"
            app:tab_item_is_equ_width="false"
            app:tab_max_scale="1"
            app:tab_min_scale="1">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivNavHomepage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_nav_homepage_normal"/>
                <TextView
                    android:textSize="10sp"
                    android:textColor="@color/primary_text_color"
                    android:gravity="center_vertical"
                    android:id="@+id/tvNavHomepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/nav_homepage"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp">
                <ImageView
                    android:id="@+id/ivNavBookshelf"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_nav_bookshelf_normal"/>
                <TextView
                    android:textSize="10sp"
                    android:textColor="@color/primary_text_color"
                    android:gravity="center_vertical"
                    android:id="@+id/tvNavBookshelf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/nav_bookshelf"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp">
                <ImageView
                    android:id="@+id/ivNavSquare"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_nav_square_normal"/>
                <TextView
                    android:textSize="10sp"
                    android:textColor="@color/primary_text_color"
                    android:gravity="center_vertical"
                    android:id="@+id/tvNavSquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/nav_category"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivNavMine"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_nav_mine_normal"/>
                <TextView
                    android:textSize="10sp"
                    android:textColor="@color/primary_text_color"
                    android:gravity="center_vertical"
                    android:id="@+id/tvNavMine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/nav_mine"/>
            </LinearLayout>
        </com.angcyo.tablayout.DslTabLayout>
        <FrameLayout
            android:layout_gravity="center"
            android:id="@+id/lyFloatPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.qmuiteam.qmui.widget.QMUIProgressBar
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                android:layout_width="51dp"
                android:layout_height="51dp"
                app:qmui_background_color="@color/player_progress_background_color"
                app:qmui_max_value="100"
                app:qmui_progress_color="#ff71e2ff"
                app:qmui_stroke_width="4dp"
                app:qmui_type="type_circle"/>
            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                android:layout_gravity="center"
                android:id="@+id/ivFloatPlayerCover"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:src="@mipmap/default_cover"
                app:qmui_border_width="0dp"
                app:qmui_is_circle="true"/>
            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                android:layout_gravity="center"
                android:id="@+id/ivPlay"
                android:visibility="visible"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_float_player_play_btn"
                app:qmui_border_width="0dp"/>
        </FrameLayout>
    </com.qmuiteam.qmui.layout.QMUIFrameLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottie/loading.json"
        app:lottie_loop="true"
        app:lottie_repeatMode="restart"/>
</androidx.constraintlayout.widget.ConstraintLayout>
